# deadbeef

./: deadbeef.h  main.c  meson.build  meson_options.txt
.github/workflows/: build.yml
plugins/lastfm/: lastfm.c
plugins/medialib/: medialibscanner.c
plugins/portaudio/: meson.build
